tests/snapshot/error/source_locations/expression/update/set_named_property.js
var obj = {
  get foo() {
    return 1
  },
  set foo(_) {
    throw new Error();
  }
};

obj.foo = 1;